测试朱雀新红包

--- a/config_example/setting.yaml
+++ b/config_example/setting.yaml
@@ -10,3 +10,8 @@ mysql:
   db: tgbot
   user: xxx
   password: xxx
+zhuque_redpocket:
+  retry_count: 20
+  sleep_time_max: 20
+  sleep_time_min: 10
+  push_chat_id: "me"
