修改supervisor和session位置

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ autostart = true
 autorestart = true
 logfile_maxbytes = 1MB
 logfile_backups = 10
-stderr_logfile = logs/main.log
+stderr_logfile = logs/main_err.log
 stdout_logfile = logs/main.log
 
 [program:update]
@@ -20,7 +20,7 @@ autostart = true
 autorestart = true
 logfile_maxbytes = 1MB
 logfile_backups = 10
-stderr_logfile = logs/update.log
+stderr_logfile = logs/update_err.log
 stdout_logfile = logs/update.log
 
 [supervisord]
@@ -32,14 +32,14 @@ logfile_backups = 10
 user = root
 
 [inet_http_server]
-port = 0.0.0.0:5001
-username = yy
-password = yy920120
+port = 0.0.0.0:9001
+username = %(ENV_SUPERVISOR_USERNAME)s
+password = %(ENV_SUPERVISOR_PASSWORD)s
 
 [supervisorctl]
-serverurl = http://127.0.0.1:5001
-username = yy
-password = yy920120
+serverurl = http://127.0.0.1:9001
+username = %(ENV_SUPERVISOR_USERNAME)s
+password = %(ENV_SUPERVISOR_PASSWORD)s
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
