--- a/supervisord.conf
+++ b/supervisord.conf
@@ -20,7 +20,7 @@ autostart = true
 autorestart = true
 logfile_maxbytes = 1MB
 logfile_backups = 10
-stderr_logfile = logs/update_err.log
+stderr_logfile = logs/update.log
 stdout_logfile = logs/update.log
 
 [supervisord]
