--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.29.zip
+﻿https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
 # pyrogram
 apscheduler
 cryptography
@@ -15,6 +15,6 @@ aiosqlite
 redis
 pyyaml
 
-torch
+openvino
 
 supervisor
