--- a/config_example/launch.yaml
+++ b/config_example/launch.yaml
@@ -5,6 +5,8 @@ scripts:
   zhuque:
     - redpocket
     - dajie
-    - ydx
+    - ydx_model
   redleaves:
+    - redpocket
+  agsv:
     - redpocket
