--- a/config_example/launch.yaml
+++ b/config_example/launch.yaml
@@ -2,6 +2,9 @@ schedulers:
   zhuque:
     - ydx_refresh_withdrawal
 scripts:
+  ptvicomo:
+    - gift
+    - lottery
   zhuque:
     - redpocket
     - dajie
