添加猪猪打劫脚本，监控被打劫

--- a/config_example/launch.yaml
+++ b/config_example/launch.yaml
@@ -3,8 +3,10 @@ schedulers:
     - ydx_refresh_withdrawal
 scripts:
   ptvicomo:
-    - gift
     - lottery
+    - blackjack
+    - redpocket
+    - transform
   zhuque:
     - redpocket
     - dajie
